<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/update_body_backg"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/_10sdp"
    android:paddingLeft="@dimen/_5sdp"
    android:paddingRight="@dimen/_5sdp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/upapplogo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:civ_border_color="#D6D6D6"
            app:civ_border_width="4dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/ic_red_check"/>
        <TextView
            android:id="@+id/upappname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disible_title"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_5sdp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    </LinearLayout>

    <TextView
        android:id="@+id/updatedescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/disible_description"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp" />

    <Button
        android:id="@+id/LogoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/log_out"/>

    <ImageView
        android:id="@+id/whatsAppBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/whats_app_icon"
        android:adjustViewBounds="true"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"/>


</LinearLayout>