<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:gravity="center"

    tools:context=".ui.yesterday_result.YesterdayResultActivity">

    <TextView
        android:id="@+id/yesterdayTimeTextView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:text="Yesterday Result 02/06/2021,Wednesday"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/red" />

    <androidx.recyclerview.widget.RecyclerView

        android:layout_gravity="center"
        android:id="@+id/rvResultSlots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:visibility="gone"
        android:fillViewport="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.smb.glowbutton.NeonButton
                android:id="@+id/morningButton"
                style="@style/MyNeonButtonStyle"
                app:nb_text="@string/morning_time"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <com.smb.glowbutton.NeonButton
                android:id="@+id/eveningButton"
                style="@style/MyNeonButtonStyle"
                app:nb_text="@string/evening_time"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <com.smb.glowbutton.NeonButton
                android:id="@+id/nightButton"
                style="@style/MyNeonButtonStyle"
                app:nb_text="@string/night_time"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>